gitops-main/base/services/order-tracking-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-tracking-service
  namespace: order-tracking-service
  labels:
    app: order-tracking-service

spec:
  revisionHistoryLimit: 2          
  replicas: 2                      

# Denne Deployment styrer alle pods, der har app=order-tracking-service som label
  selector:
    matchLabels:
      app: order-tracking-service

# Pod template – beskriver hvordan hver pod skal se ud
  template:
    metadata:
      labels:
        app: order-tracking-service

  # Security context for pod
    spec:
      securityContext:             
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001              

      imagePullSecrets:            
        - name: gitlab-registry-secret

      containers:
        - name: order-tracking-service
          image: registry.gitlab.au.dk/swwao/f2025/exams-projects/group-7/orderservice:v1.10

          ports:
            - containerPort: 8080

          # Security context for container
          securityContext:
            privileged: false                 
            allowPrivilegeEscalation: false   
            capabilities:
              drop:
                - ALL              

          readinessProbe:         
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:           
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 5

          # Ressourcebegrænsninger for containeren
          resources:
            requests:
              cpu: "30m"          # Minimum CPU pod'en forventer at bruge (30 millicores)
              memory: "64Mi"      # Minimum RAM den forventer
            limits:
              cpu: "100m"         # Maks CPU (100 millicores)
              memory: "128Mi"     # Maks RAM
