gitops-main/base/services/order-tracking-service/allow-ingress-from-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-api-gateway
  namespace: order-tracking-service
spec:
  podSelector:
    matchLabels:
      app: order-tracking-service
  policyTypes:
    - Ingress

  ingress:
    - from: # API Gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: api-gateway
          podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8080
